try to fix banner z-index

--- a/src/sections/navigation/banner/style.scss
+++ b/src/sections/navigation/banner/style.scss
@@ -28,7 +28,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 1;
+  z-index: 5;
 
   @include breakpoint (laptop-up) {
     position: relative;
